# libwasteland

./: .gitignore  COPYING  ChangeLog  Doxyfile  Makefile.am  README  acinclude.m4  configure.ac
examples/: Makefile.am  invert_cursors  invert_cursors.cc  invert_font  invert_font.cc  invert_sprites.cc  invert_title_pic.cc
src/: Makefile.am  base_image.cc  base_image.h  base_transparent_image.cc  base_transparent_image.h  bit_reader.cc  bit_reader.h  bit_writer.cc  bit_writer.h  cursor.cc  cursor.h  end_anim.cc  end_anim.h  end_anim_base_frame.cc  end_anim_frame.cc  end_anim_frame.h  exceptions.h  font_char.cc  font_char.h  huffman_node.cc  huffman_node.h  huffman_reader.cc  huffman_reader.h  huffman_writer.cc  huffman_writer.h  image.cc  image.h  pic_reader.cc  pic_reader.h  sprite.cc  sprite.h  sprite_istreams.cc  sprite_istreams.h  sprite_ostreams.cc  sprite_ostreams.h  test.cpp  tile.cc  tile.h  tile_reader.cc  tile_writer.cc  (+13 more)
src/test/: Makefile.am  bit_reader_test.cc  bit_reader_test.h  bit_writer_test.cc  cursor_test.cc  cursor_test.h  font_char_test.cc  font_char_test.h  huffman_istream_test.cc  huffman_istream_test.h  huffman_ostream_test.cc  huffman_ostream_test.h  huffman_reader_test.cc  huffman_reader_test.h  huffman_writer_test.cc  huffman_writer_test.h  sprite_test.cc  sprite_test.h  test_libwasteland.cc  tile_test.cc  tile_test.h  title_pic_test.cc  title_pic_test.h
src/test/data/: ic0_9.wlf  title.pic
src/tools/: Makefile.am  decodepic.cc  decodepic.h  encodepic.cc  encodepic.h  fileutils.cc  fileutils.h  gdutils.cc  gdutils.h  packcpa  packcpa.cc  packcpa.h  packcursors.cc  packcursors.h  packfont.cc  packfont.h  packsprites.cc  packsprites.h  program.cc  program.h  program_option.cc  program_option.h  unpackcpa.cc  unpackcpa.h  unpackcursors.cc  unpackcursors.h  unpackfont.cc  unpackfont.h  unpacksprites.cc  unpacksprites.h  unpacktiles.cc  unpacktiles.h
src/wasteland/: Makefile.am  bit_reader.cc  bit_reader.h  bit_writer.cc  bit_writer.h  cpa_anim.cc  cpa_anim.h  cpa_anim_block.cc  cpa_anim_block.h  cpa_anim_frame.cc  cpa_anim_frame.h  cpa_anim_update.cc  cpa_anim_update.h  end_anim.cc  end_anim.h  end_anim_base_frame.h  end_anim_block.cc  end_anim_block.h  end_anim_frame.cc  end_anim_frame.h  end_anim_update.cc  end_anim_update.h  exceptions.h  font_char.cc  font_char.h  huffman_istream.cc  huffman_istream.h  huffman_node.h  huffman_ostream.cc  huffman_ostream.h  huffman_reader.h  huffman_streambuf.cc  huffman_streambuf.h  huffman_writer.cc  image.cc  image.h  pic_anim.cc  pic_anim.h  pic_anim_block.cc  pic_anim_block.h  (+17 more)
test/: Makefile.am  bit_reader_test.cc  bit_reader_test.h  bit_writer_test.cc  bit_writer_test.h  cursor_test.cc  font_char_test.cc  huffman_reader_test.cc  huffman_writer_test.cc  image_test.cc  image_test.h  sprite_test.cc  tile_test.cc  title_pic_test.cc  transparent_image_test.cc  transparent_image_test.h
test/data/: allhtds1  colorf.fnt  curs  masks.wlf  title.pic
tools/: Makefile.am  decodepic.cc  decodepic.h  gdutils.cc  gdutils.h  program.cc  program.h  program_option.h
