AC_PREREQ([2.50])
AC_INIT([libwasteland], [0.1], [k@ailis.de])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([config.h])

AC_LANG_CPLUSPLUS
AM_PROG_LIBTOOL
AM_PATH_CPPUNIT(1.12.1)
AC_PROG_INSTALL

AC_CONFIG_FILES(
  Makefile 
  src/Makefile
  test/Makefile
)
AC_OUTPUT
