bin_PROGRAMS = invert_title_pic invert_sprites

invert_title_pic_CXXFLAGS = -I../src
invert_title_pic_LDADD = ../src/libwasteland.la
invert_title_pic_LDFLAGS = -all-static
invert_title_pic_SOURCES = invert_title_pic.cc

invert_sprites_CXXFLAGS = -I../src
invert_sprites_LDADD = ../src/libwasteland.la
invert_sprites_LDFLAGS = -all-static
invert_sprites_SOURCES = invert_sprites.cc

AM_CFLAGS = -Wall -Werror -O2
