bin_PROGRAMS = \
  invert_title_pic \
  invert_sprites \
  invert_font \
  invert_cursors

invert_title_pic_CXXFLAGS = -I../src
invert_title_pic_LDADD = ../src/libwasteland.la
invert_title_pic_LDFLAGS = -all-static
invert_title_pic_SOURCES = invert_title_pic.cc

invert_sprites_CXXFLAGS = -I../src
invert_sprites_LDADD = ../src/libwasteland.la
invert_sprites_LDFLAGS = -all-static
invert_sprites_SOURCES = invert_sprites.cc

invert_font_CXXFLAGS = -I../src
invert_font_LDADD = ../src/libwasteland.la
invert_font_LDFLAGS = -all-static
invert_font_SOURCES = invert_font.cc

invert_cursors_CXXFLAGS = -I../src
invert_cursors_LDADD = ../src/libwasteland.la
invert_cursors_LDFLAGS = -all-static
invert_cursors_SOURCES = invert_cursors.cc

AM_CFLAGS = -Wall -Werror -O2
