lib_LTLIBRARIES = libwasteland.la
libwasteland_la_LDFLAGS = -version-info 1:0:0 -no-undefined
libwasteland_la_SOURCES = \
  bit_reader.cc \
  bit_writer.cc \
  huffman_node.cc \
  huffman_streambuf.cc \
  huffman_istream.cc \
  huffman_ostream.cc \
  vxor_streambuf.cc \
  vxor_istream.cc \
  vxor_ostream.cc \
  image.cc \
  transparent_image.cc \
  vxor_image.cc \
  sprite_istreams.cc \
  sprite_ostreams.cc \
  title_pic.cc \
  sprite.cc \
  font_char.cc \
  cursor.cc \
  tile_reader.cc \
  tile_writer.cc \
  tile.cc \
  cpa_anim.cc \
  cpa_anim_block.cc \
  cpa_anim_update.cc \
  cpa_anim_frame.cc \
  pic_anim.cc \
  pic_anim_block.cc \
  pic_anim_update.cc \
  pic_anim_frame.cc
libwastelandincludedir = $(includedir)
libwastelandinclude_HEADERS = \
  bit_reader.h \
  bit_writer.h \
  huffman_node.h \
  huffman_streambuf.h \
  huffman_istream.h \
  huffman_ostream.h \
  vxor_streambuf.h \
  vxor_istream.h \
  vxor_ostream.h \
  image.h \
  vxor_image.h \
  transparent_image.h \
  sprite_istreams.h \
  sprite_ostreams.h \
  title_pic.h \
  sprite.h \
  font_char.h \
  cursor.h \
  tile_reader.h \
  tile_writer.h \
  tile.h \
  cpa_anim.h \
  cpa_anim_block.h \
  cpa_anim_update.h \
  cpa_anim_frame.h \
  pic_anim.h \
  pic_anim_block.h \
  pic_anim_update.h \
  pic_anim_frame.h
AM_CFLAGS = -Wall -Werror -O2
